# kube-lease-rust-example

./: Cargo.toml  README.md
src/: cli.rs  main.rs
