[package]
name = "lease-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
kube = "0.98.0"
# we need to use the alpha version of kubert to ensure the same version of
# k8s-openapi is used between kube and kubert
kubert = { version = "0.23.0-alpha7", default-features = false, features = [
  "lease",
] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "ansi",
  "fmt",
  "json",
  "env-filter",
] }
